--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4962,6 +4962,7 @@ a.badge:focus {
   padding-top: 30px;
   padding-bottom: 30px;
   margin-bottom: 30px;
+  height: 314px;
   color: inherit;
   background-color: #eee;
 }
